fix the alignment on the hero

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ main {
   padding: 60px 0;
   display: flex;
   flex-direction: column;
-  gap: 29px;
+  gap: 1rem;
 }
 
 #hero .content p {
@@ -227,7 +227,7 @@ main {
   height: 500px;
   position: absolute;
   right: 258px;
-  top: 120px;
+  top: 100px;
   border-radius: 60px;
   background: rgba(239, 139, 141, 0.75);
   z-index: 0;
@@ -238,7 +238,7 @@ main {
   width: 269px;
   position: absolute;
   right: 590px;
-  top: 547px;
+  top: 517px;
   border-radius: 20px;
   background-color: var(--white-primary);
   box-shadow: 0px 0px 15px 1px rgb(0 0 0 / 25%);
@@ -293,7 +293,7 @@ main {
 
 #hero .content-image > img {
   position: absolute;
-  top: 70px;
+  top: 50px;
   right: 190px;
   height: 817px;
 }
